# chewing-vision

./: .gitignore  ATTRIBUTION.md  LICENSE  README.md  SPEC.md  prd.json  pyproject.toml  setup.sh
archive/day1/: .gitignore  README.md
chewing/: __init__.py  cli.py  compare.py  eval.py  firebase.py  labels.py  overlay.py  peaks.py  quality.py  segmentation.py  signals.py  smoothing.py  types.py  viz.py
chewing/engines/: __init__.py  base.py  orofac.py  ours.py
day1/: chewing_demo.py  requirements.txt
docs/: DATA_COLLECTION_PROTOCOL.md  SPEAKING_DETECTION_SPEC.md  future_roadmap.md  market_research.md  market_sankey.html  progress.txt  rf_explainer.html  technical_guide.md
migrations/: 20260516152237_create-annotation-tables.sql  20260516161755_create-loso-tables.sql  20260517020053_create-loso-predictions.sql
ml/: ChewingClassifier.mlmodel  PIPELINE_OVERVIEW.md  PRESENTATION_SCRIPT.md  README.md  annotate.py  batch_reanalyze.py  compare_sessions.py  compare_signals.py  coreml_convert.py  download_sessions.py  import_to_db.py  log_yaw.py  pipeline.py  save_loso_results.py  setup_cml_env.sh  sync.py  utils.py  video_server.py
ml/outputs/: ChewingClassifier_20260513T145034_838cje.mlmodel  model_rf.joblib  pipeline_viz.html  session_comparison.html
tests/: test_confounder.py  test_eval.py  test_label_vocab.py  test_labels_io.py  test_peaks.py  test_quality.py  test_segmentation.py  test_signals.py  test_smoke.py
web/: package-lock.json  package.json
web/src/: App.tsx  index.css  types.ts
web/src/components/: ImuChart.tsx  ProgressStrip.tsx  (+1 more)
(+4 files in other folders)
